consolidation II